--- a/Leaen_OpenGL/Leaen_OpenGL/Leaen_OpenGL.vcxproj.filters
+++ b/Leaen_OpenGL/Leaen_OpenGL/Leaen_OpenGL.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Hellow_Window.cpp">
       <Filter>资源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\Dependences\GLAD\src\glad.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
