--- a/Hello_Triangle/Leaen_OpenGL/Leaen_OpenGL.vcxproj
+++ b/Hello_Triangle/Leaen_OpenGL/Leaen_OpenGL.vcxproj
@@ -76,12 +76,12 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(solutionDir)Dependences\GLFW\include;$(solutionDir)Dependences\GLEW\include;$(solutionDir)Dependences\GLAD\include;$(solutionDir)Leaen_OpenGL</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(solutionDir)..\Dependences\GLFW\include;$(solutionDir)..\Dependences\GLEW\include;$(solutionDir)..\Dependences\GLAD\include;$(solutionDir)Leaen_OpenGL</AdditionalIncludeDirectories>
       <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <StringPooling>true</StringPooling>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(solutionDir)Dependences\GLFW\lib-vc2015;$(solutionDir)Dependences\GLEW\lib\Release\Win32;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(solutionDir)..\Dependences\GLFW\lib-vc2015;$(solutionDir)..\Dependences\GLEW\lib\Release\Win32</AdditionalLibraryDirectories>
       <AdditionalDependencies>glew32s.lib;glew32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);opengl32.lib;glfw3.lib;</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
@@ -102,14 +102,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(solutionDir)Dependences\GLFW\include;$(solutionDir)Dependences\GLEW\include;$(solutionDir)Dependences\GLAD\include;$(solutionDir)Leaen_OpenGL</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(solutionDir)..\Dependences\GLFW\include;$(solutionDir)..\Dependences\GLEW\include;$(solutionDir)..\Dependences\GLAD\include;$(solutionDir)Leaen_OpenGL</AdditionalIncludeDirectories>
       <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <StringPooling>true</StringPooling>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(solutionDir)Dependences\GLFW\lib-vc2015;$(solutionDir)Dependences\GLEW\lib\Release\Win32;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(solutionDir)..\Dependences\GLFW\lib-vc2015;$(solutionDir)..\Dependences\GLEW\lib\Release\Win32</AdditionalLibraryDirectories>
       <AdditionalDependencies>glew32s.lib;glew32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);opengl32.lib;glfw3.lib;</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
@@ -129,7 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Dependences\GLAD\src\glad.c" />
+    <ClCompile Include="..\..\Dependences\GLAD\src\glad.c" />
     <ClCompile Include="Hello_T riangle1.cpp" />
     <ClCompile Include="Hello_T riangle3.cpp" />
     <ClCompile Include="Hello_Triangle2.cpp" />
