--- a/Hello_Triangle/Leaen_OpenGL/Leaen_OpenGL.vcxproj.filters
+++ b/Hello_Triangle/Leaen_OpenGL/Leaen_OpenGL.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Dependences\GLAD\src\glad.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Hello_Triangle2.cpp">
       <Filter>资源文件</Filter>
     </ClCompile>
@@ -29,6 +26,9 @@
     </ClCompile>
     <ClCompile Include="Hello_Triangle4.cpp">
       <Filter>资源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Dependences\GLAD\src\glad.c">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
